--- a/ItemRental-Android/app/src/main/res/values/colors.xml
+++ b/ItemRental-Android/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#42A5F5</color>
     <color name="colorPrimaryDark">#1E88E5</color>
     <color name="colorAccent">#C62828</color>
+
+    <color name="black">#000000</color>
 </resources>
