--- a/ItemRental-Android/app/src/main/res/values/colors.xml
+++ b/ItemRental-Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#42A5F5</color>
-    <color name="colorPrimaryDark">#1E88E5</color>
-    <color name="colorAccent">#C62828</color>
+    <color name="colorPrimary">#1E88E5</color>
+    <color name="colorPrimaryDark">#3765B8</color>
+    <color name="colorAccent">#EF7E31</color>
 </resources>
