--- a/ItemRental-Android/app/src/main/res/layout/fragment_login.xml
+++ b/ItemRental-Android/app/src/main/res/layout/fragment_login.xml
@@ -5,11 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingTop="16dp"
         android:paddingRight="24dp">
@@ -27,7 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/username_input"
+            android:id="@+id/usernameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:errorEnabled="true"
@@ -36,63 +33,63 @@
             app:layout_constraintTop_toBottomOf="@id/splashImage">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/username_edit_text"
+                android:id="@+id/usernameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password_input"
+            android:id="@+id/passwordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:errorEnabled="true"
             app:errorTextAppearance="@style/ErrorText"
-            app:layout_constraintTop_toBottomOf="@id/username_input"
+            app:layout_constraintTop_toBottomOf="@id/usernameInput"
             android:hint="@string/password">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_edit_text"
+                android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-            android:id="@+id/log_in_button"
+            android:id="@+id/logInButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/button_log_in"
-            app:layout_constraintTop_toBottomOf="@id/password_input"
+            app:layout_constraintTop_toBottomOf="@id/passwordInput"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
     <RelativeLayout
-            android:id="@+id/register_layout"
+            android:id="@+id/registerLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
-            app:layout_constraintTop_toBottomOf="@id/log_in_button"
+            app:layout_constraintTop_toBottomOf="@id/logInButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-                android:id="@+id/register_text_view"
+                android:id="@+id/registerTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="@string/register_message"/>
 
         <com.google.android.material.button.MaterialButton
-                android:id="@+id/register_button"
+                android:id="@+id/registerButton"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_toEndOf="@id/register_text_view"
+                android:layout_toEndOf="@id/registerTextView"
                 android:text="@string/button_register"/>
     </RelativeLayout>
 
@@ -101,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintTop_toTopOf="@id/log_in_button"
+            app:layout_constraintTop_toTopOf="@id/logInButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
