--- a/ItemRental-Android/app/src/main/res/navigation/navigation_main.xml
+++ b/ItemRental-Android/app/src/main/res/navigation/navigation_main.xml
@@ -5,10 +5,20 @@
 
     <fragment android:id="@+id/splashFragment" android:name="proiectcolectiv.g934.itemrental.page.splash.SplashFragment"
               android:label="SplashFragment">
-        <action android:id="@+id/action_splashFragment_to_loginFragment" app:destination="@id/loginFragment"
-                app:launchSingleTop="true" app:popUpTo="@+id/navigation_main" app:popUpToInclusive="true"
-        />
+        <action
+            android:id="@+id/action_splashFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/navigation_main"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment android:id="@+id/loginFragment" android:name="proiectcolectiv.g934.itemrental.page.login.LoginFragment"
-              android:label="LoginFragment"/>
+              android:label="LoginFragment">
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment android:id="@+id/registerFragment"
+              android:name="proiectcolectiv.g934.itemrental.page.register.RegisterFragment"
+              android:label="RegisterFragment"/>
 </navigation>
