--- a/ItemRental-Android/app/src/main/res/values/colors.xml
+++ b/ItemRental-Android/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3765B8</color>
     <color name="colorAccent">#EF7E31</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="error_red">#C62828</color>
 </resources>
