--- a/ItemRental-Android/app/src/main/res/navigation/navigation_main.xml
+++ b/ItemRental-Android/app/src/main/res/navigation/navigation_main.xml
@@ -11,14 +11,37 @@
             app:launchSingleTop="true"
             app:popUpTo="@+id/navigation_main"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashFragment_to_listFragment"
+            app:destination="@id/listFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/navigation_main"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment android:id="@+id/loginFragment" android:name="proiectcolectiv.g934.itemrental.page.login.LoginFragment"
               android:label="LoginFragment">
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_listFragment"
+            app:destination="@id/listFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/navigation_main"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment android:id="@+id/registerFragment"
               android:name="proiectcolectiv.g934.itemrental.page.register.RegisterFragment"
               android:label="RegisterFragment"/>
+    <fragment
+        android:id="@+id/listFragment"
+        android:name="proiectcolectiv.g934.itemrental.page.list.ListFragment"
+        android:label="ListFragment" >
+        <action
+            android:id="@+id/action_listFragment_to_splashFragment"
+            app:destination="@id/splashFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/navigation_main"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
