Optimized image handling on item list and added Start time as a field

--- a/ItemRental-Android/app/src/main/res/layout/fragment_add.xml
+++ b/ItemRental-Android/app/src/main/res/layout/fragment_add.xml
@@ -153,13 +153,32 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/addEndDateInput"
+                android:id="@+id/addStartDateInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/addPriceInput">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addStartDateEditText"
+                    android:layout_width="256dp"
+                    android:layout_height="wrap_content"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:hint="@string/start_date" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/addEndDateInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/addStartDateInput">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/addEndDateEditText"
