--- a/ItemRental-Android/app/src/main/res/layout/item_rentableitem.xml
+++ b/ItemRental-Android/app/src/main/res/layout/item_rentableitem.xml
@@ -31,9 +31,9 @@
             android:id="@+id/categoryTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/itemNameTextView" />
 
         <ImageView
             android:id="@+id/itemImage"
