Implemented reviews screen

--- a/ItemRental-Android/app/src/main/res/layout/item_rentableitem_details.xml
+++ b/ItemRental-Android/app/src/main/res/layout/item_rentableitem_details.xml
@@ -20,7 +20,7 @@
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/ic_user"
-            android:tint="@color/colorPrimaryDark"
+            android:tint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/userTextView"
             app:layout_constraintHorizontal_chainStyle="packed"
