--- a/ItemRental-Android/app/src/main/res/values/arrays.xml
+++ b/ItemRental-Android/app/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
 
     <string-array name="categories_array">
         <item>Film &amp; Photography</item>
-        <item>Projectors and Screens</item>
+        <item>Projectors &amp; Screens</item>
         <item>Drones</item>
         <item>DJ Equipment</item>
         <item>Sports</item>
